adding checkbox and cog to list-table screenshot

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -73,6 +73,14 @@ Div Element Notes:
     border-right: 1px solid transparent;
   }
 
+  .rs-table-input {
+    width: 10px;
+  }
+
+  .rs-table-cog {
+    width: 16px;
+  }
+
   .rs-table-status-ok {
     background-color: $green;
   }
