--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -71,6 +71,11 @@ Div Element Notes:
   th.rs-table-status,
   .rs-table-header.rs-table-status {
     border-right: 1px solid transparent;
+    &:before {
+      content: '\2002 ';
+      width: 10px;
+      display: block;
+    }
   }
 
   .rs-table-input {
