--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -72,7 +72,7 @@ Div Element Notes:
   .rs-table-header.rs-table-status {
     border-right: 1px solid transparent;
     &:before {
-      content: '\2002 ';
+      content: '\00A0 ';
       width: 10px;
       display: block;
     }
