--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -78,12 +78,19 @@ Div Element Notes:
     }
   }
 
-  .rs-table-input {
+  .rs-table-checkbox {
     width: 10px;
   }
 
   .rs-table-cog {
     width: 16px;
+  }
+
+  .rs-table-input {
+    padding: 0 10px;
+    & input, & select {
+      margin: 0;
+    }
   }
 
   .rs-table-status-ok {
