adding rs-table-radio

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -82,6 +82,11 @@ Div Element Notes:
     width: 10px;
   }
 
+  .rs-table-radio {
+    width: 10px;
+    padding-right: 0;
+  }
+
   .rs-table-cog {
     width: 16px;
   }
