adding placeholder comments

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -119,10 +119,38 @@ Div Element Notes:
   }
 }
 
+// Sort Links
+
+
+// List Table Wrapper
+
 .rs-list-table-wrapper{
   position: relative;
 }
 
+// List Table Scrolling
+
+// embedded List Table
+
 .rs-embedded-table {
 
 }
+
+// Stretched List Table
+
+
+// Sort Links
+
+
+// Base Table Overlay
+
+
+// Loading Overlay
+
+
+// Error Overlay
+
+
+// Empty Overlay
+
+//
