--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -96,23 +96,44 @@ Div Element Notes:
 
 .rs-table-checkbox {
   width: 10px;
+  &.rs-table-cell {
+    padding: 10px;
+  }
 }
 
 .rs-table-radio {
   width: 10px;
   padding-right: 0;
+  &.rs-table-cell {
+    padding: 10px 0 10px 10px;
+  }
 }
 
 .rs-table-cog {
   width: 16px;
+  &.rs-table-cell {
+    padding: 10px;
+  }
 }
 
-.rs-table-input input {
-  margin: 0;
+.rs-table-input {
+  &.rs-table-cell {
+    padding: 10px;
+  }
+
+  & input {
+    margin: 0;
+  }
 }
 
-.rs-table-select select {
-  margin: 0;
+.rs-table-select {
+  &.rs-table-cell {
+    padding: 10px;
+  }
+
+  & select {
+    margin: 0;
+  }
 }
 
 .rs-table-status-ok {
