--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -63,9 +63,8 @@
 
 .rs-table-radio {
   width: 10px;
-  padding-right: 0;
   &.rs-table-cell {
-    padding: 10px 0 10px 10px;
+    padding: 10px;
   }
 }
 
