adding rs-select-table opt-in class

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -14,7 +14,9 @@
 }
 
 .rs-table-row {
-  &.hover, &.selected {
+  .rs-select-table &:hover,
+  &.hover,
+  &.selected {
     .rs-table-cell {
       background-color: #f1f6ff;
     }
