--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -18,7 +18,7 @@
   list-style: none;
   z-index: $zindexMenu;
 
-  @include animate-visibility(0.1);
+  @include animate-visibility;
   @include border-radius(3px);
   @include box-shadow(0 0 9px 2px rgba(0, 0, 0, 0.2));
 
