--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -183,19 +183,6 @@ td {
   width: 100%;
 }
 
-/* Loading Overlay */
-.rs-table-overlay-loading {
-  background: url('clouding.gif') center center no-repeat;
-  &:before {
-    content: "Loading\2026";
-    position: relative;
-    top: 22px;
-    left: 5px;
-    color: $grey300;
-    font-size: 12px;
-  }
-}
-
 .rs-table-overlay-content {
   text-align: center;
 }
@@ -223,4 +210,18 @@ td {
 .rs-table-overlay-message {
   font-size: 13px;
   color: $grey400;
+}
+
+/* Loading Overlay */
+.rs-table-overlay-loading .rs-table-overlay-message {
+  color: $grey300;
+  &:before {
+    background: url('clouding.gif') center center no-repeat;
+    content: "";
+    display: block;
+    height: 20px;
+    width: 100%;
+    position: relative;
+    left: -5px;
+  }
 }
