Adding embedded list styles

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -17,6 +17,7 @@
 @import "patterns/footer";
 @import "patterns/forms";
 @import "patterns/list-table";
+@import "patterns/embedded-list-table";
 @import "patterns/main";
 @import "patterns/menus";
 @import "patterns/nav-primary";
