[Feature][278] Add focus style for fields with validation errors.

--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -255,6 +255,34 @@ textarea {
   select,
   textarea {
     border-color: $red;
+
+    &:focus,
+    &.focus {
+      background-color: #fff6f6;
+
+      @include box-shadow(0 0 0 2px $red);
+    }
+  }
+
+  input[type="text"],
+  input[type="password"],
+  textarea {
+    &:focus,
+    &.focus {
+      border-color: rgba(0, 0, 0, 0.15);
+
+      @include box-shadow(
+        0 0 0 2px $red,
+        0 1px 3px 0 rgba(0, 0, 0, 0.15) inset
+      );
+    }
+  }
+
+  select {
+    &:focus,
+    &.focus {
+      border-color: #999;
+    }
   }
 
   label,
