adding a line break between style declaration and closing bracket

--- a/lib/stylesheets/patterns/_embedded-list-table.scss
+++ b/lib/stylesheets/patterns/_embedded-list-table.scss
@@ -13,14 +13,15 @@
 
   .rs-table-overlay-subtitle {
     color: #666;
-    font-weight: 600;}
+    font-weight: 600;
+  }
   .rs-table-overlay-message {
     margin-top: 0;
   }
 }
 
 .rs-embedded-small {
-  max-height: 204px;
+  max-height: 185px;
 }
 
 .rs-embedded-medium {
