--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -134,12 +134,18 @@
       text-decoration: none;
       font-weight: bold;
 
+      .rs-icon-external-dark {
+        visibility: hidden;
+      }
+
       &:hover,
       &.hover {
         color: #fff;
         background-color: #444;
 
         .rs-icon-external-dark {
+          visibility: visible;
+
           @include icon-sprite(external-dark-hover);
         }
       }
