--- a/lib/stylesheets/patterns/_embedded-list-table.scss
+++ b/lib/stylesheets/patterns/_embedded-list-table.scss
@@ -1,22 +1,27 @@
 .rs-embedded-list-table-wrapper {
   border: 1px solid #eee;
   overflow: auto;
-}
 
-.rs-embedded-list-table {
-  margin-bottom: 0;
-  height: 115px;
+  .rs-table-overlay {
+    height: 95px;
+    margin-top: 0;
+  }
 
-  tr:last-child td {
-    border-bottom: none;
+  .rs-table-overlay-message {
+    margin-top: 0;
   }
 
   .rs-table-overlay-subtitle {
     color: #666;
     font-weight: 600;
   }
-  .rs-table-overlay-message {
-    margin-top: 0;
+}
+
+.rs-embedded-list-table {
+  margin-bottom: 0;
+
+  tr:last-child td {
+    border-bottom: none;
   }
 }
 
