--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -174,15 +174,17 @@ td {
 
 /* Base Table Overlay */
 .rs-table-overlay {
-  position: absolute;
-  top: 20px;
-  right: 0;
-  bottom: 0;
-  left: 0;
   display: table;
-  margin: auto;
-  height: auto;
   width: 100%;
+  height: 300px;
+  margin-top: -20px;
+}
+
+.rs-table-overlay-content {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  margin: 0 auto;
   text-align: center;
 }
 
