--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -19,6 +19,7 @@ input[type="text"],
 input[type="password"],
 select,
 textarea {
+  color: $grey-darker;
   font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
@@ -87,6 +88,7 @@ textarea {
 input[type="text"],
 input[type="password"],
 textarea {
+  background-color: $white;
   @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.15) inset);
 
   &:focus,
@@ -98,6 +100,10 @@ textarea {
       0 1px 3px 0 rgba(0, 0, 0, 0.15) inset
     );
   }
+}
+
+select {
+  background-color: $white;
 }
 
 select[multiple] {
