apply vertical gradient styling to select elements

--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -102,11 +102,13 @@ textarea {
   }
 }
 
-select {
+select:not([multiple]) {
   background-color: $white;
+  @include background-image(linear-gradient($white, #dedede));
 }
 
 select[multiple] {
+  background-color: $white;
   height: auto;
 }
 
