[Defect][299] Update primary navigation to work without child LIs and As.

--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -20,6 +20,7 @@
 @import "patterns/embedded-list-table";
 @import "patterns/main";
 @import "patterns/menus";
+@import "patterns/nav-base";
 @import "patterns/nav-primary";
 @import "patterns/nav-secondary";
 @import "patterns/nav-utility";
