--- a/lib/stylesheets/_utilities.scss
+++ b/lib/stylesheets/_utilities.scss
@@ -22,6 +22,10 @@
   font-weight: normal;
 }
 
+.rs-no-wrap {
+  white-space: nowrap;
+}
+
 %last-child {
   & > *:last-child {
     padding-bottom: 0;
