[Defect][307] Stop wrapping menu categories.

--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -40,6 +40,7 @@
   font-size: 10px;
   font-weight: bold;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .rs-dropdown-menu > li:first-child > .rs-dropdown-category {
