initial create item styles

--- a/lib/stylesheets/_utilities.scss
+++ b/lib/stylesheets/_utilities.scss
@@ -22,6 +22,11 @@
   font-weight: normal;
 }
 
+.rs-key-divider {
+  content: '\B7';
+  margin: 0 10px;
+}
+
 %last-child {
   & > *:last-child {
     padding-bottom: 0;
