[Defect][299] Alias .rs-footer as .rs-nav-footer.

--- a/lib/stylesheets/_layout.scss
+++ b/lib/stylesheets/_layout.scss
@@ -20,12 +20,9 @@ body {
 
 // .rs-push must be the same height as .rs-footer
 .rs-push,
-.rs-footer {
+.rs-footer,
+.rs-nav-footer {
   height: $app-footer-height;
-}
-
-.rs-footer {
-  background: $grey-darker;
 }
 
 .rs-container {
