--- a/lib/stylesheets/patterns/_footer.scss
+++ b/lib/stylesheets/patterns/_footer.scss
@@ -23,9 +23,11 @@
   float: right;
 }
 
-.rs-footer {
+.rs-footer,
+.rs-nav-footer {
   color: #999;
   font-size: 12px;
+  background: $grey-darker;
 
   a {
     color: #999;
