--- a/lib/stylesheets/patterns/_nav-secondary.scss
+++ b/lib/stylesheets/patterns/_nav-secondary.scss
@@ -28,12 +28,14 @@
 
 		&:hover,
   	&.hover {
+  		& > a,
   		.rs-nav-link {
 				color: $nav-primary-link-hover;
   		}
   	}
 
 		&.active {
+			& > a,
 			.rs-nav-link {
 				color: $red;
 			}
