--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -13,6 +13,12 @@ a {
     color: $blue;
     text-decoration: underline;
   }
+
+  &.disabled {
+    color: $grey300;
+    cursor: default;
+    text-decoration: none;
+  }
 }
 
 i,
