[Defect][306] Add disabled states for navigation.

--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -55,6 +55,15 @@
     	}
     }
 
+    &.disabled {
+      & > a,
+      .rs-nav-link {
+        color: #bbb;
+        cursor: default;
+        border-bottom: none;
+      }
+    }
+
   	&.rs-dropdown {
   		margin-right: 46px;
 
