--- a/lib/stylesheets/patterns/_nav-secondary.scss
+++ b/lib/stylesheets/patterns/_nav-secondary.scss
@@ -40,5 +40,13 @@
 				color: $red;
 			}
 		}
+
+		&.disabled {
+			& > a,
+			.rs-nav-link {
+				color: #bbb;
+				cursor: default;
+			}
+		}
   }
 }
