[Defect][306] Hide carets for disabled menu items.

--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -91,6 +91,12 @@
   			@include icon-sprite-position(caret-primary-active, 16px);
   		}
   	}
+
+    &.rs-dropdown.disabled {
+      .rs-caret {
+        display: none;
+      }
+    }
   }
 }
 
