rs-nav-link should have extra padding only when dropdown active

--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -70,7 +70,7 @@
   			right: 1px;
   		}
 
-  		&.active > a, .rs-nav-link {
+  		&.active > a, &.active .rs-nav-link {
   			padding-right: 26px;
   		}
   	}
