--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -61,6 +61,7 @@
         color: #bbb;
         cursor: default;
         border-bottom: none;
+        text-shadow: 0 1px #f5f5f5;
       }
     }
 
