rs-create-value & rs-quiet should be read when error state is active

--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -309,6 +309,12 @@ textarea {
 
   &.error {
     @extend .rs-control-group.error;
+
+    .rs-create-value,
+    .rs-quiet {
+      color: $red;
+    }
+
   }
 }
 
