updating examples and changing all keys and controls to red on error

--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -285,6 +285,8 @@ textarea {
     }
   }
 
+  .rs-controls,
+  .rs-help-inline,
   .rs-help-block,
   .rs-validation-inline,
   .rs-validation-block {
