--- a/lib/stylesheets/patterns/_detail-view.scss
+++ b/lib/stylesheets/patterns/_detail-view.scss
@@ -25,8 +25,12 @@
 }
 
 .rs-detail-section-body {
-  padding: 0 30px;
+  padding: 30px 30px 0;
   margin: 0 0 30px;
+}
+
+.rs-detail-section-header + .rs-detail-section-body {
+  padding-top: 0px;
 }
 
 // Collapsible Detail Section
