--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -207,6 +207,32 @@ textarea {
   .rs-control-label {
     text-align: right;
   }
+
+  .rs-detail-item.success {
+    @extend .rs-control-group.success;
+  }
+
+  .rs-detail-item.error {
+    @extend .rs-control-group.error;
+
+    .rs-create-value,
+    .rs-quiet {
+      color: $red;
+    }
+  }
+
+  .rs-detail-key {
+    width: 160px;
+    color: $grey600;
+  }
+
+  .rs-detail-value {
+    margin-left: 180px;
+
+    .rs-key-divider {
+      color: $grey600;
+    }
+  }
 }
 
 /* Messaging */
@@ -296,37 +322,5 @@ textarea {
   .rs-validation-indicator {
     @include icon(13px, 12px);
     @include icon-sprite(exclamation-sign);
-  }
-}
-
-.rs-detail-item {
-
-  .rs-form-create &.success {
-    @extend .rs-control-group.success;
-  }
-
-  .rs-form-create &.error {
-    @extend .rs-control-group.error;
-
-    .rs-create-value,
-    .rs-quiet {
-      color: $red;
-    }
-
-  }
-}
-
-.rs-form-create {
-  .rs-detail-key {
-    width: 160px;
-    color: $grey600;
-  }
-
-  .rs-detail-value {
-    margin-left: 180px;
-
-    .rs-key-divider {
-      color: $grey600;
-    }
   }
 }
