Feature [330] Modify Status CSS to depend on rs-icon-mini class
I had used rs-status-ok, rs-status-warning, rs-status-error, and rs-status-disabled to set the background color on the monitoring checks.

After realizing that those same classes were used to set the color of text status indicators, I changed the style rules to select based on the rs-icon-mini class

--- a/lib/stylesheets/patterns/_mini-icon-list.scss
+++ b/lib/stylesheets/patterns/_mini-icon-list.scss
@@ -25,18 +25,18 @@
 	margin: 3px;
 }
 
-.rs-status-ok {
+.rs-icon-mini.rs-status-ok {
   background-color: $green !important;
 }
 
-.rs-status-warning {
+.rs-icon-mini.rs-status-warning {
   background-color: $yellow !important;
 }
 
-.rs-status-error {
+.rs-icon-mini.rs-status-error {
   background-color: $red !important;
 }
 
-.rs-status-disabled {
+.rs-icon-mini.rs-status-disabled {
   background-color: $grey300 !important;
 }
