--- a/lib/stylesheets/patterns/_mini-icon-list.scss
+++ b/lib/stylesheets/patterns/_mini-icon-list.scss
@@ -6,37 +6,33 @@
 .rs-icon-list {
 	padding: 0;
 	margin: 0;
-	min-width: 60px;
-	max-height: 24px;
-	overflow: hidden;
 }
 
 .rs-icon-list-item {
 	list-style-type: none;
 	float: left;
-	width: 12px;
-	height: 12px;
+	display: block;
 	cursor: pointer;
 }
 
-.rs-icon-mini {
+.rs-icon-list-item .rs-icon-status {
 	width: 6px;
 	height: 6px;
 	margin: 3px;
 }
 
-.rs-icon-mini.rs-status-ok {
-  background-color: $green !important;
+.rs-icon-status.rs-status-ok {
+  background-color: $green;
 }
 
-.rs-icon-mini.rs-status-warning {
-  background-color: $yellow !important;
+.rs-icon-status.rs-status-warning {
+  background-color: $yellow;
 }
 
-.rs-icon-mini.rs-status-error {
-  background-color: $red !important;
+.rs-icon-status.rs-status-error {
+  background-color: $red;
 }
 
-.rs-icon-mini.rs-status-disabled {
-  background-color: $grey300 !important;
+.rs-icon-status.rs-status-disabled {
+  background-color: $grey300;
 }
