--- a/lib/stylesheets/patterns/_status-list.scss
+++ b/lib/stylesheets/patterns/_status-list.scss
@@ -1,21 +1,21 @@
-/** Table Mini **/
-.rs-table-icon-list {
+/** Table Status List **/
+.rs-table-status-list {
 	padding: 7px 8px;
 }
 
-.rs-icon-list {
+.rs-status-list {
 	padding: 0;
 	margin: 0;
 }
 
-.rs-icon-list-item {
+.rs-status-list-item {
 	list-style-type: none;
 	float: left;
 	display: block;
 	cursor: pointer;
 }
 
-.rs-icon-list-item .rs-icon-status {
+.rs-status-list-item .rs-icon-status {
 	width: 6px;
 	height: 6px;
 	margin: 3px;
