--- a/lib/stylesheets/canon.scss
+++ b/lib/stylesheets/canon.scss
@@ -14,6 +14,7 @@
 
 @import "patterns/buttons";
 @import "patterns/detail-view";
+@import "patterns/facets";
 @import "patterns/footer";
 @import "patterns/forms";
 @import "patterns/list-table";
