--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -158,6 +158,16 @@ textarea {
 }
 
 /* Create/Horizontal Forms */
+@mixin set-form-control-labels($label-width: 160px, $value-margin-left: 20px){
+  .rs-control-label {
+    width: $label-width;
+  }
+  .rs-controls,
+  .rs-controls-static {
+    margin-left: $label-width + $value-margin-left;
+  }
+}
+
 .rs-form-horizontal,
 .rs-form-create {
   .rs-control-group,
@@ -171,17 +181,30 @@ textarea {
 
   .rs-control-label {
     float: left;
-    width: 160px;
     margin-top: 2px;
-  }
-
-  .rs-controls,
-  .rs-controls-static {
-    margin-left: 180px;
   }
 
   .rs-controls-static {
     padding-top: 2px;
+  }
+
+  // Variable Width Form Labels/Controls
+  @include set-form-control-labels();
+
+  .rs-control-group-small {
+    @include set-form-control-labels(60px);
+  }
+
+  .rs-control-group-medium {
+    @include set-form-control-labels(80px);
+  }
+
+  .rs-control-group-large {
+    @include set-form-control-labels(100px);
+  }
+
+  .rs-control-group-xlarge {
+    @include set-form-control-labels(120px);
   }
 
   input[type="text"],
@@ -191,9 +214,19 @@ textarea {
   textarea {
     margin-bottom: 0;
   }
+
 }
 
 /* Create Forms */
+@mixin set-form-key-values($label-width: 160px, $value-margin-left: 20px){
+  .rs-detail-key {
+    width: $label-width;
+  }
+  .rs-detail-value {
+    margin-left: $label-width + $value-margin-left;
+  }
+}
+
 .rs-form-create {
   label:after {
     content: none;
@@ -222,16 +255,31 @@ textarea {
   }
 
   .rs-detail-key {
-    width: 160px;
     color: $grey600;
   }
 
   .rs-detail-value {
-    margin-left: 180px;
-
     .rs-key-divider {
       color: $grey600;
     }
+  }
+
+  @include set-form-key-values();
+
+  .rs-detail-item-small {
+    @include  set-form-key-values(60px);
+  }
+
+  .rs-detail-item-medium {
+    @include  set-form-key-values(80px);
+  }
+
+  .rs-detail-item-large {
+    @include  set-form-key-values(100px);
+  }
+
+  .rs-detail-item-xlarge {
+    @include  set-form-key-values(120px);
   }
 }
 
