Update borders to grey50

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -11,7 +11,7 @@
 
 .rs-table-header,
 .rs-table-cell {
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid $grey50;
 }
 
 .rs-table-row {
