Update embedded table to grey50

--- a/lib/stylesheets/patterns/_embedded-list-table.scss
+++ b/lib/stylesheets/patterns/_embedded-list-table.scss
@@ -1,5 +1,5 @@
 .rs-embedded-list-table-wrapper {
-  border: 1px solid #eee;
+  border: 1px solid $grey50;
   overflow: auto;
 
   .rs-table-overlay {
