--- a/lib/stylesheets/patterns/_forms.scss
+++ b/lib/stylesheets/patterns/_forms.scss
@@ -87,6 +87,8 @@ textarea {
 input[type="text"],
 input[type="password"],
 textarea {
+  box-sizing: border-box;
+
   @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.15) inset);
 
   &:focus,
