--- a/lib/stylesheets/_custom-fonts.scss
+++ b/lib/stylesheets/_custom-fonts.scss
@@ -1,43 +1,47 @@
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('SourceSansPro-Light-webfont.eot');
-  src: url('SourceSansPro-Light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('SourceSansPro-Light-webfont.woff') format('woff'),
-    url('SourceSansPro-Light-webfont.ttf') format('truetype'),
-    url('SourceSansPro-Light-webfont.svg#SourceSansProLight') format('svg');
-  font-weight: 200;
-  font-style: normal;
-}
+@include font-face(
+  'Source Sans Pro',
+  font-files(
+    'SourceSansPro-Light-webfont.woff',
+    'SourceSansPro-Light-webfont.ttf',
+    'SourceSansPro-Light-webfont.svg#SourceSansProLight'
+  ),
+  'SourceSansPro-Light-webfont.eot',
+  200,
+  normal
+);
 
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('SourceSansPro-Regular-webfont.eot');
-  src: url('SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('SourceSansPro-Regular-webfont.woff') format('woff'),
-    url('SourceSansPro-Regular-webfont.ttf') format('truetype'),
-    url('SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('svg');
-  font-weight: 400;
-  font-style: normal;
-}
+@include font-face(
+  'Source Sans Pro',
+  font-files(
+    'SourceSansPro-Regular-webfont.woff',
+    'SourceSansPro-Regular-webfont.ttf',
+    'SourceSansPro-Regular-webfont.svg#SourceSansProRegular'
+  ),
+  'SourceSansPro-Regular-webfont.eot',
+  400,
+  normal
+);
 
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('SourceSansPro-Semibold-webfont.eot');
-  src: url('SourceSansPro-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('SourceSansPro-Semibold-webfont.woff') format('woff'),
-    url('SourceSansPro-Semibold-webfont.ttf') format('truetype'),
-    url('SourceSansPro-Semibold-webfont.svg#SourceSansProSemibold') format('svg');
-  font-weight: 600;
-  font-style: normal;
-}
+@include font-face(
+  'Source Sans Pro',
+  font-files(
+    'SourceSansPro-Semibold-webfont.woff',
+    'SourceSansPro-Semibold-webfont.ttf',
+    'SourceSansPro-Semibold-webfont.svg#SourceSansProSemibold'
+  ),
+  'SourceSansPro-Semibold-webfont.eot',
+  600,
+  normal
+);
 
-@font-face {
-  font-family: 'Source Sans Pro';
-  src: url('SourceSansPro-Bold-webfont.eot');
-  src: url('SourceSansPro-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('SourceSansPro-Bold-webfont.woff') format('woff'),
-    url('SourceSansPro-Bold-webfont.ttf') format('truetype'),
-    url('SourceSansPro-Bold-webfont.svg#SourceSansProBold') format('svg');
-  font-weight: 700;
-  font-style: normal;
-}
+@include font-face(
+  'Source Sans Pro',
+  font-files(
+    'SourceSansPro-Bold-webfont.woff',
+    'SourceSansPro-Bold-webfont.ttf',
+    'SourceSansPro-Bold-webfont.svg#SourceSansProBold'
+  ),
+  'SourceSansPro-Bold-webfont.eot',
+  700,
+  normal
+);
