--- a/lib/stylesheets/_sprites.scss
+++ b/lib/stylesheets/_sprites.scss
@@ -59,3 +59,13 @@ $icon-spacing: 10px;
   @include icon;
   @include icon-sprite(checkbox-checked);
 }
+
+.rs-arrow-blue, .rs-arrow-blue.right {
+  @include icon;
+  @include icon-sprite(arrow-blue-right);
+}
+
+.rs-arrow-blue.up {
+  @include icon;
+  @include icon-sprite(arrow-blue-up);
+}
